<resources>
    <string name="app_name">Sales &amp; Recovery</string>
    <string name="btnClose">Closed</string>
    <string name="btnSearch">Search</string>
    <string name="txt_content">Content</string>
    <string name="btnSend">Send</string>
    <string name="button_scan">Scan</string>
    <string name="invoiceId">InvoiceId:</string>
    <string name="print">Print</string>
    <string name="btnSave">Save</string>
    <string name="btnCancel">Cancel</string>
    <string name="previousBalance">Previous Balance</string>
    <string name="btn_test">Test</string>
    <string name="pref_default_agent_code">Agent Code</string>
    <string name="pref_title_agent_code">Agent Code</string>
    <string name="pref_default_display_name">Name</string>
    <string name="pref_title_display_name">Name</string>
    <string name="pref_header_general">General</string>
    <string name="none_paired">No Device found</string>
    <string name="scanning">Scanning</string>
    <string name="select_device">Select Device</string>
    <string name="none_found">No Device found</string>
    <string name="strLang">Lang</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="hint_agent_code">Enter your Agent Code</string>
    <string name="hint_enter_url">Enter Url</string>
    <string name="save">Save</string>
    <string name="zone_list">Zone List</string>
    <string name="hint_zone">Lahore</string>
    <string name="company_name">Company Name</string>
    <string name="supply_amp_recovery"><![CDATA[Supply & Recovery]]></string>
    <string name="management_system">Management System</string>
    <string name="powered_by_syntaxlab_solutions">Powered by: SyntaxLab Solutions</string>
    <string name="summary">Summary</string>
    <string name="sync_data">Sync Data</string>
    <string name="cash_in_hand">Cash In hand (Sum of Case Sale &amp; Recovery): %.0f</string>
    <string name="total_recovery_amount">Total Recovery Amount : %.0f</string>
    <string name="total_case_sale_amount">Total CashSale Amount : %.0f</string>
    <string name="total_sale_amount">Total Sale Amount : %.0f</string>
    <string name="ledger">Ledger</string>
    <string name="add_invoice">Add Invoice</string>
    <string name="receive_payment">Receive Payment</string>
    <string name="quantity">Quantity</string>
    <string name="no_data_found">No data available</string>
    <string name="sub_zone_list">Sub Zone List</string>
    <string name="add_item">Add Item</string>
    <string name="total">Total</string>
    <string name="new_balance">New Balance</string>
    <string name="payment_recieved">Payment Received</string>
    <string name="discount">Discount</string>
    <string name="net_amount">Net Amount</string>
    <string name="error_bluetooth_not_available">Bluetooth not available</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_connecting">connecting…</string>
    <string name="title_connected_to">connected:</string>
    <string name="not_connected">Please connect a Bluetooth printer</string>
    <string name="bt_not_enabled_leaving">Bluetooth does not start, quit the program</string>
    <string name="title_not_connected">Is not connected</string>
    <string name="receipt_top">"Name:  %1$s\nDate:  %2$s\n</string>
    <string name="receipt_order_headings">-------------------------------\n%1$-8s %2$7s %3$7s %4$7s\n\n</string>
    <string name="receipt_order_name">%1$s\n</string>
    <string name="receipt_order_value">%1$-8s %2$7s %3$7s %4$7s\n</string>
    <string name="quantity_amount_format">%1$-7d x %2$-10d</string>
    <string name="text_thank_you">Thank You!</string>

    <string name="receipt_payments">\nReceived: %1$s\n</string>
    <string name="discounted_receipt_payments">\nTotal: %1$s\nDiscount: %2$s\nNet Amount: %3$s\n</string>
    <string name="balance_receipt_payments">\nReceived: %1$s\nPrevious Balance: %2$s\nNew Balance: %3$s</string>
    <string name="balance_receipt_invoice">\nTotal: %1$s\nDiscount: %2$s\nNet Amount: %3$s\nPrevious Balance: %4$s\nNew Balance: %5$s</string>
    <string name="balance_without_discount_invoice">\nNet Amount: %1$s\nPrevious Balance: %2$s\nNew Balance: %3$s</string>
    <string name="receipt_bottom">\n-------------------------------\n\n</string>
    <string name="edit_invoice_item">Edit Invoice Item</string>
    <string name="add_invoice_item">Add Invoice Item</string>
    <string name="return_invoice_item">Return Invoice Item</string>
    <string name="return_item">Return Item</string>
    <string name="print_balance_in_invoice">Print Balance in invoice</string>
    <string name="add_cash_invoice">Add Cash Invoice</string>
    <string name="account_name">Cash Account :</string>
    <string name="btn_close">Close</string>
    <string name="view_payments">View Payments</string>
    <string name="reset">Reset</string>
    <string name="date">Date</string>
    <string name="memo">Memo</string>
    <string name="invoice_amount">Invoice Amount</string>
    <string name="payment">Payment</string>
    <string name="account">Account</string>
    <string name="payments">Payments</string>
</resources>
