<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ConfigurationActivity">

    <EditText
        android:id="@+id/merchant_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/hint_agent_code"
        android:inputType="number"
        android:padding="8dp" />

    <EditText
        android:id="@+id/url_to_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_border"
        android:hint="@string/hint_enter_url"
        android:inputType="textUri"
        android:padding="8dp" />

    <CheckBox
        android:id="@+id/print_balance_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/print_balance_in_invoice" />

    <Button
        android:id="@+id/save_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#000000" />
</LinearLayout>