<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.najam.bluetoothprinteremulator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/settings_btn"
            android:layout_marginTop="48dp"
            android:layout_marginRight="48dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@null"
            android:src="@drawable/ic_configg" />

        <TextView
            android:id="@+id/matvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/company_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:fontFamily="sans-serif"
            android:text="@string/supply_amp_recovery"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textSize="28sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/management_system"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="28sp"
            android:textStyle="normal|bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/zones"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/zone_list"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/summary"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/summary"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/sync_data"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/sync_data"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/add_cash_invoice"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/add_cash_invoice"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/view_payments"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/view_payments"
                    android:textAllCaps="false" />
                <Button
                    android:id="@+id/reset"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/button_bg"
                    android:text="@string/reset"
                    android:textAllCaps="false" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/powered_by_syntaxlab_solutions"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</LinearLayout>
