<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/InvoiceBackground"
    android:orientation="vertical"
    tools:context=".ui.ViewPaymentsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="@string/payments"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:id="@+id/date_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/date"
            android:textColor="@android:color/black"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/account_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/account"
            android:textColor="@android:color/black"
            android:textStyle="normal" />


        <TextView
            android:id="@+id/memo_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/memo"
            android:textColor="@android:color/black"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/invoice_amount_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/invoice_amount"
            android:textColor="@android:color/black"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/payment_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/payment"
            android:textColor="@android:color/black"
            android:textStyle="normal" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <ListView
        android:id="@+id/payments_lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/InvoiceBackground" />

</LinearLayout>