<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/InvoiceBackground"
        android:padding="8dp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/InvoiceBackground"
        android:padding="8dp"
        android:textColor="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ledger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/ListColor"
            android:text="@string/ledger"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/addInvoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/ListColor"
            android:text="@string/add_invoice"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/receivePayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/ListColor"
            android:text="@string/receive_payment"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>